--- a/practice1.html
+++ b/practice1.html
@@ -9,7 +9,8 @@
        k298b686@ku.edu</p>
 
     <a href="https://github.com/kaibarnhart">Here is a link to my GitHub.</a>
-
+    
+    <p>I am a student at KU!</p>
     <div id="image1">
         <img src="https://upload.wikimedia.org/wikipedia/commons/9/90/Kansas_Jayhawks_1946_logo.svg" width="200" height="200" alt="Kansas Jayhawks Logo"/> 
     </div>
