--- a/practice1.html
+++ b/practice1.html
@@ -12,7 +12,7 @@
     
     <p>I am a student at KU!</p>
     <div id="image1">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/9/90/Kansas_Jayhawks_1946_logo.svg" width="200" height="200" alt="Kansas Jayhawks Logo"/> 
+        <img src="IMG_9464.png" width="200" height="200" alt="Kansas Jayhawks Logo"/> 
     </div>
     
     <p>Here’s a YouTuber I like:</p>
