--- a/practice1.html
+++ b/practice1.html
@@ -12,10 +12,10 @@
     
     <p>I am a student at KU!</p>
     <div id="image1">
-        <img src="IMG_9464.png" width="200" height="200" alt="Kansas Jayhawks Logo"/> 
+        <img src="/Users/kaibarnhart/Desktop/IMG_9464.png" width="350" height="475">
     </div>
     
     <p>Here’s a YouTuber I like:</p>
-    <iframe width="300" height="200" src="https://www.youtube.com/embed/xYtb-U_GVWg?si=RmMbuLOpFPIOSRAy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="400" height="300" src="https://www.youtube.com/embed/xYtb-U_GVWg?si=RmMbuLOpFPIOSRAy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
 </html>
